--- a/ambari-base/Dockerfile
+++ b/ambari-base/Dockerfile
@@ -17,9 +17,9 @@ rm -f /lib/systemd/system/anaconda.target.wants/*;
 VOLUME [ "/sys/fs/cgroup" ]
 ENTRYPOINT ["/usr/sbin/init"]
 
-RUN yum install -y systemd* && yum clean all
+RUN rpm --rebuilddb; yum install -y yum-utils yum-plugin-ovl tar git curl bind-utils unzip wget && yum clean all
+RUN rpm --rebuilddb; yum install -y systemd* && yum clean all
 
-RUN yum install -y yum-utils yum-plugin-ovl tar git curl bind-utils unzip wget && yum clean all
 
 # Setup sshd
 RUN yum install -y openssh-server openssh-clients && yum clean all
